# HaskellProj

./: .dockerignore  .gitignore  CHANGELOG.md  HaskellProj.cabal  LICENSE  README.md  body.json  cabal.project  dockerfile  migration.sql
app/: Main.hs
app/Business/: StatusCalc.hs
app/DB/: Queries.hs
app/Server/: Handler.hs  handler.hs
app/Types/: Exemplar.hs  Exemples.hs  Inventario.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/tmp/src-16959/generics-sop-0.5.1.4/: generics-sop.cabal
frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/catalogo/: page.tsx
frontend/src/app/emprestados/: page.tsx
frontend/src/app/inventario/: page.tsx
frontend/src/app/nao-encontrados/: page.tsx
frontend/src/components/dashboard/: InventarioChart.tsx  RadialBreakdown.tsx  RadialProgress.tsx  StatsCards.tsx
frontend/src/components/layout/: AppShell.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  skeleton.tsx  toast.tsx
frontend/src/lib/: api.ts  hooks.ts  types.ts  utils.ts
frontend/src/providers/: ThemeProvider.tsx
