cabal-version:      3.0
name:               HaskellProj
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Gloria
maintainer:         gmpianheri@gmail.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable HaskellProj
    import:           warnings
    main-is:          Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    other-modules:
        Server.Handler
        DB.Queries
        Types.Exemplar
        Types.Inventario
        Business.StatusCalc
    build-depends:
        base ^>=4.18.3.0,
        servant,
        servant-server,
        wai,
        wai-cors,
        warp == 3.3.30,
        http-types,
        aeson,
        postgresql-simple,
        bytestring,
        text,
        time,
        mtl,
        resource-pool
    hs-source-dirs:   app
    default-language: Haskell2010